--- a/index.html
+++ b/index.html
@@ -177,8 +177,171 @@
                     </div>
                 </div>
             </div>
+            <!-- Time da empresa -->
+            <div id="team-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="main-title">Nosso Time</h3>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile1.jpg" class="card-img-top" alt="Imagem de perfil 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">john Brown</h5>
+                                    <p>Software Developer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile2.jpg" class="card-img-top" alt="Imagem de perfil 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Carol Shelley</h5>
+                                    <p>SEO Consultant</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile3.jpg" class="card-img-top" alt="Imagem de perfil 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Paul Baker</h5>
+                                    <p>Project Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile4.jpg" class="card-img-top" alt="Imagem de perfil 4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mary Pyle</h5>
+                                    <p>UX/UI Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Trabalhe Conosco -->
+            <div id="apply-area">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-6 apply-box" id="company-img"></div>
+                        <div class="col-md-6 apply-box" id="pattern-img">
+                            <h4>Gosta de desafios?</h4>
+                            <p>Temos várias posições abertas, entre elas: Software Engineer, UI/UX Designer, Project Manager e mais.</p>
+                            <p>Clique no botão abaixo e confira os benefícios e as posições em aberto.</p>
+                            <p>Aqui você terá a chance de trabalhar com os as melhores tecnologias e os profissionais mais capacitados.</p>
+                            <a href="#" class="main-btn" id="apply-btn">Saiba Mais</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Portifólio -->
+            <div id="portfolio-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="main-title">Conheça nossos projetos</h3>
+                        </div>
+                        <div class="col-md-12" id="filter-btn-box">
+                            <button class="main-btn filter-btn active" id="all-btn">Todos</button>
+                            <button class="main-btn filter-btn" id="dev-btn">Desenvolvedores</button>
+                            <button class="main-btn filter-btn" id="dsg-btn">Design</button>
+                            <button class="main-btn filter-btn" id="seo-btn">SEO</button>
+                        </div>
+                        <div class="col-md-4 project-box dev">
+                            <img src="img/proj1.jpg" class="img-fluid" alt="projeto 1">
+                        </div>
+                        <div class="col-md-4 project-box dsg">
+                            <img src="img/proj2.jpg" class="img-fluid" alt="projeto 2">
+                        </div>
+                        <div class="col-md-4 project-box seo">
+                            <img src="img/proj3.jpg" class="img-fluid" alt="projeto 3">
+                        </div>
+                        <div class="col-md-4 project-box dev">
+                            <img src="img/proj4.jpg" class="img-fluid" alt="projeto 4">
+                        </div>
+                        <div class="col-md-4 project-box dsg">
+                            <img src="img/proj5.jpg" class="img-fluid" alt="projeto 5">
+                        </div>
+                        <div class="col-md-4 project-box seo">
+                            <img src="img/proj6.jpg" class="img-fluid" alt="projeto 6">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Newsletter -->
+           <div id="news-area">
+             <div class="container">
+                <div class="col-md-12">
+                    <h3 class="main-title">Fique por dentro das novidades</h3>
+                </div>
+                <p>Assine nossa lista de e-mails, e receba nossos conteúdos sobre desenvolvimento de software</p>
+                <form action="">
+                    <input type="email" class="form-control" id="email-input" name="email" placeholder="Seu melhor e-mail">
+                    <input type="submit" id="news-btn" value="Inscrever">
+                </form>
+            </div>
+          </div>
+          <!-- Call to action -->
+          <div id="call-area">
+              <div class="container">
+                  <div class="row">
+                      <p>Deseja fazer um orçamento sem compromisso?</p>
+                      <button class="main-btn" id="call-btn">Orçar</button>
+                  </div>
+              </div>
+          </div>
         </div>
     </main>
+    <!-- Rodapé -->
+    <footer>
+        <div id="contact-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="main-title"> Entre em contato conosco</h3>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-phone"></i>
+                        <p><span class="contact-title">Ligue para: (81)-99999-9999</span></p>
+                        <p><span class="contact-title">Horários:</span> 08:00 às 18:00</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-envelope"></i>
+                        <p><span class="contact-title">Envie um e-mail:</span> contato@hdcangecy.com.br</p>
+                    </div>
+                    <div class="col-md-4 contact-box">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p><span class="contact-title">Venha tomar um café:</span> Rua Lorem ipsum 1314</p>
+                    </div>
+                    <div class="col-md-6" id="msg-box">
+                        <p>Ou nos deixe uma mensagem:</p>
+                    </div>
+                    <div class="col-md-6" id="contact-form">
+                        <form action="">
+                            <input type="email" class="form-control" placeholder="E-mail" name="email">
+                            <input type="text" class="form-control" placeholder="Assunto" name="subject">
+                            <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message"></textarea>
+                            <input type="submit" class="main-btn" value="Enviar"> 
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="copy-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>Desenvolvido por <a href="mailto:DiegoprogBr@hotmail.com" target="_blank">Diego Augusto</a> &copy; 2020</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Scripts do projeto -->
     <script src="scripts.js"></script>
 </body>
 </html>
