linkando a barra de menu

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" id="home-menu">Home</a>
-                        <a class="nav-item nav-link" id="about-menu">A agencia</a>
-                        <a class="nav-item nav-link" id="services-menu">Serviços</a>
-                        <a class="nav-item nav-link" id="team-menu">Time</a>
-                        <a class="nav-item nav-link" id="portfolio-menu">Projetos</a>
-                        <a class="nav-item nav-link" id="contact-menu">Contatos</a>
+                        <a href="#nav-container" class="nav-item nav-link" id="home-menu">Home</a>
+                        <a href="#sobre" class="nav-item nav-link" id="about-menu">A agencia</a>
+                        <a href="#especialidades" class="nav-item nav-link" id="services-menu">Serviços</a>
+                        <a href="#time" class="nav-item nav-link" id="team-menu">Time</a>
+                        <a href="#projetos" class="nav-item nav-link" id="portfolio-menu">Projetos</a>
+                        <a href="#contatos" class="nav-item nav-link" id="contact-menu">Contatos</a>
                     </div>
                 </div>
             </nav>
@@ -92,7 +92,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="main-title">Sobre a HDC agency</h3>
+                            <h3 class="main-title" id="sobre">Sobre a HDC agency</h3>
                         </div>
                         <div class="col-md-6">
                             <img class="img-fluid" src="img/agencia.jpg" alt="Agência HDC">
@@ -119,7 +119,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="main-title">Nossas especialidades</h3>
+                            <h3 class="main-title" id="especialidades">Nossas especialidades</h3>
                         </div>
                         <div class="col-md-4 service-box">
                             <i class="fas fa-mobile-alt"></i>
@@ -182,7 +182,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="main-title">Nosso Time</h3>
+                            <h3 class="main-title" id="time">Nosso Time</h3>
                         </div>
                         <div class="col-md-3">
                             <div class="card">
@@ -243,7 +243,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h3 class="main-title">Conheça nossos projetos</h3>
+                            <h3 class="main-title" id="projetos">Conheça nossos projetos</h3>
                         </div>
                         <div class="col-md-12" id="filter-btn-box">
                             <button class="main-btn filter-btn active" id="all-btn">Todos</button>
@@ -276,7 +276,7 @@
            <div id="news-area">
              <div class="container">
                 <div class="col-md-12">
-                    <h3 class="main-title">Fique por dentro das novidades</h3>
+                    <h3 class="main-title" id="contatos">Fique por dentro das novidades</h3>
                 </div>
                 <p>Assine nossa lista de e-mails, e receba nossos conteúdos sobre desenvolvimento de software</p>
                 <form action="">
