Adicionado parte responsiva para tablets e smartphones

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div class="container" id="nav-container">
-            <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
                 <a href="#" class="navbar-brand">
                     <img id="logo" src="img/hdcagency_logo.svg" alt="HDC Agency"> HDC Agency
                 </a>
@@ -55,7 +55,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/banner1.png" class="d-blocl w-100" alt="projetos de e-commerce">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2>Quer criar um e-commerce?</h2>
                             <p>Conte conosco,temos mais de 30 lojas no portfólio.</p>
                             <a href="#" class="main-btn">Ver portfólio</a>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner2.png" class="d-blocl w-100" alt="Engenharia de software">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2>Está querendo tirar o projeto do papel?</h2>
                             <p>Nossa equipe de engenharia de software, está pronta para lhe atender.</p>
                             <a href="#" class="main-btn">Entre em contato</a>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="img/banner3.png" class="d-blocl w-100" alt="Manutenção em software">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2>Está procurando manutenção no seu software?</h2>
                             <p>A HDC conta com engenheiros altamente qualificados para resolver seu problema.</p>
                             <a href="#" class="main-btn">Entre em contato</a>
@@ -188,8 +188,8 @@
                             <div class="card">
                                 <img src="img/profile1.jpg" class="card-img-top" alt="Imagem de perfil 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">john Brown</h5>
-                                    <p>Software Developer</p>
+                                    <h5 class="card-title">jhon Brown</h5>
+                                    <p>Software Dev.</p>
                                 </div>
                             </div>
                         </div>
@@ -215,7 +215,7 @@
                             <div class="card">
                                 <img src="img/profile4.jpg" class="card-img-top" alt="Imagem de perfil 4">
                                 <div class="card-body">
-                                    <h5 class="card-title">Mary Pyle</h5>
+                                    <h5 class="card-title">Karina Austen</h5>
                                     <p>UX/UI Designer</p>
                                 </div>
                             </div>
